# pmbs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
build-aur/: .SRCINFO  .gitignore  PKGBUILD
build-deb/: .gitignore  Makefile  changelog.Debian  conffiles  control
build-rpm/: pmbs.spec
doc/: aur.md  pmbs.md
etc/: home.toml.zh.example
etc-pmbs/: home.toml.en.example  home.toml.zh.example
etc-pmbs/rsync/: rsync-home-exclude.txt.example  rsync-home.sh.example
src/: lib.rs  main.rs
src/clean/: ls.rs  mod.rs  safe_rm_subvol.rs
src/cli/: help.rs  mod.rs  sh.rs
src/config/: config_env.rs  mod.rs
src/snapshot/: mod.rs  t.rs
systemd-unit/: pmbs-clean.timer  pmbs-snapshot.service
systemd-unit/system/: pmbs-clean.service  pmbs-snapshot.timer
systemd-unit/user/: pmbs-rsync-home.service.example  pmbs-rsync-home.timer.example
