[package]
name = "pmbs"
version = "0.1.0-a2"
edition = "2024"
license = "MIT"

authors = ["secext2022 <secext2022@outlook.com>"]
description = "(每分钟) 创建 btrfs 快照, 并自动清理. (Make btrfs snapshot (every minute), and auto clean)"
repository = "https://github.com/fm-elpac/pmbs"
keywords = ["btrfs", "snapshot", "backup", "filesystem"]
categories = ["command-line-utilities", "filesystem", "security"]

[[bin]]
name = "pmbs"
path = "src/main.rs"

[dependencies]
pm-bin = "^0.1.1"

log = "^0.4.27"
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.143"
serde_with = "^3.14.0"
toml = "^0.9.5"
chrono = "^0.4.41"
regex = { version = "^1.11.2", default-features = false, features = ["std", "perf"] }

[features]
default = []

[build-dependencies]
pm-bin = { version = "^0.1.1", features = ["build"] }

[profile.release]
strip = true
lto = true
