[package]
name = "pmbs"
version = "0.1.0"
edition = "2024"
license = "MIT"

authors = ["secext2022 <secext2022@outlook.com>"]
description = "(每分钟) 创建 btrfs 快照, 并自动清理. (Make btrfs snapshot (every minute), and auto clean)"
repository = "https://github.com/fm-elpac/pmbs"
keywords = ["btrfs", "snapshot", "backup", "filesystem"]
categories = ["command-line-utilities", "filesystem", "security"]

[[bin]]
name = "pmbs"
path = "src/main.rs"

[dependencies]
pm-bin = "^0.1.2"

log = "^0.4.29"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.149"
serde_with = "^3.16.1"
toml = "^1.0.1"
chrono = "^0.4.43"
regex = { version = "^1.12.3", default-features = false, features = ["std", "perf"] }

[features]
default = []

[build-dependencies]
pm-bin = { version = "^0.1.2", features = ["build"] }

[profile.release]
strip = true
lto = true
